# rfpi

./: CMakeLists.txt  README.md  dependencies.txt  license
src/lib/: rf_default_simple_rx.c  rf_default_simple_tx.c  rf_module.c  rf_module.h
